<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quiz</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_play">Play</string>
    <string name="pick_directory_title">Select a folder</string>
    <string name="pick_directory_button">Use this folder</string>
    <string name="browse">Add Puzzles </string>
    <string name="clues">Clues</string>
    <string name="puzzle">Puzzle </string>
    <string name="puzzle_id">PuzzleId </string>
    <string name="system_path">System</string>
    <string name="size_is">Size: %1$s</string>
    <string name="access_denied">Access Denied</string>
    <string name="cant_open_dir">%1$s is a protected directory. You will require root access on your device to open and browse this directory</string>
    <string name="querying_filesys">Querying File System. Please wait.</string>
    <string name="filesystem">File System</string>
    <string name="empty_folder">This folder is empty</string>
    <string name="item_count_subtitle">Total of %1$s items</string>
    <string name="invalid_username">Invalid username</string>
    <string name="enter_username">Enter username</string>
    <string name="invalid_password">Invalid password</string>
    <string name="password_not_equal">password is not equal</string>
    <string name="invalid_email_address">INVALID_EMAIL_ADDRESS</string>
    <string name="username_taken">USERNAME_TAKEN</string>
    <string name="email_taken">EMAIL_TAKEN</string>
    
    <string name="login_success">"Success"</string>
   <string name="register_success">Successfully registered</string>
    <string name="exist_username">"Sorry, this username has already been taken."</string>
    <string name="exception_user_to_register">Sorry, you must supply a username to register.</string>
    <string name="exception_password_to_register">Sorry, you must supply a password to register.</string>
    
     <string name="answer">"Answer"</string>
     <string name="no_more_item">No more item </string>
     <string name="refresh"> Refresh </string>
     <string name="username">Username</string>
     <string name="password">Password</string>
     <string name="reenter_password">Re-enter Password</string>
     <string name="sample_mail">quiz@gmail.com</string>
     <string name="name">Name</string>
     <string name="login">Login</string>
     <string name="or">(or)</string>
     <string name="signup">SignUp</string>
     <string name="create_account">Create Account</string>
     
    <!-- Frament Screen -->
    <string name="register"> Registration</string>

    <string-array name="goto_locations">
        <item>Loading&#8230;</item>
        <item>Home Folder</item>
        <item>SD Card</item>
        <item>Downloads</item>
        <item>DCIM</item>
        <item>Bookmarks&#8230;</item>
        <item>Other&#8230;</item>
    </string-array>

</resources>